Fixed alignment in table headers for some projects

--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -1716,6 +1716,7 @@ div.table table tr th {
 	padding: 0.4em 0.7em;
 	border-top: 1px solid #e0e0e0;
 	border-bottom: 1px solid #d0d0d0;
+  text-align: left;
 	font-size: 1.3em;
 	font-weight: normal;
 }
